@@ -6,6 +6,9 @@
 ### Added
 - Add critical hit to chili bullet. It has a 10% chance of occurring and dealing 22 damage.
 
+### Changed
+- Guns with custom names will now have reduced chance of durability reduction.
+
 ## [2.0.0-beta.1]
 ### Added
 - Add mod data components: `loading`, `quick_loading`, `multishot`, `piercing` and `bayoneted`.
